package hust.hedspi.oop.game.entities;

public interface IDamageable {
    void takeDamage(float amount);
}
