package hust.hedspi.oop.game.entities;

public interface IInteractable {
    void onInteract(Cat player);
}
