package hust.hedspi.oop.game.entities;

import com.badlogic.gdx.graphics.g2d.SpriteBatch;
import hust.hedspi.oop.game.utils.TimeCondition;
import hust.hedspi.oop.game.managers.GameManager;
import hust.hedspi.oop.game.managers.ScreenManager;
import hust.hedspi.oop.game.screens.MinigameScreen;
import hust.hedspi.oop.game.minigames.IMinigameStrategy;

/**
 * TriggerZone là vùng va chạm ẩn (Hitbox).
 * Nó implement IInteractable để người chơi có thể nhấn [E] tương tác khi đứng đè lên.
 */
public class TriggerZone extends Entity implements IInteractable {
    private TimeCondition timeCondition;
    private IMinigameStrategy linkedMinigame;
    private String zoneName;

    public TriggerZone(float x, float y, float width, float height, String zoneName) {
        super(x, y, width, height);
        this.zoneName = zoneName;
    }

    public void setTimeCondition(TimeCondition condition) {
        this.timeCondition = condition;
    }

    public void setLinkedMinigame(IMinigameStrategy minigame) {
        this.linkedMinigame = minigame;
    }

    public String getZoneName() {
        return zoneName;
    }

    public boolean canTrigger() {
        // 1. Kiểm tra điều kiện thời gian
        if (timeCondition != null && !timeCondition.isCurrentlyValid()) {
            return false;
        }
        // 2. Kiểm tra điều kiện tiên quyết từ cốt truyện
        if (!hust.hedspi.oop.game.managers.StoryManager.getInstance().isZoneUnlocked(zoneName)) {
            return false;
        }
        return true;
    }

    @Override
    public void onInteract(Cat player) {
        // Nếu hợp lệ và có Minigame được liên kết, mở Minigame
        if (linkedMinigame != null) {
            System.out.println("TriggerZone [" + zoneName + "]: Trigger Minigame!");
            ScreenManager.getInstance().pushScreen(new MinigameScreen(linkedMinigame));
        } else {
            System.out.println("TriggerZone [" + zoneName + "]: Story Event!");
        }
    }

    @Override
    public void update(float dt) {
        // TriggerZone là vật thể tĩnh, ẩn, thường không cần update logic chuyển động
    }

    @Override
    public void render(SpriteBatch batch) {
        // TriggerZone là vô hình (Invisible), KHÔNG render gì cả.
        // Chỉ vẽ khi dùng chức năng Debug (sử dụng ShapeRenderer thay vì SpriteBatch).
    }
}
